<resources>
    <string name="app_name">Cardapio PF</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="rdb_um">Prato Feito</string>
    <string name="rdb_dois">Self Service</string>
    <string name="txt_titulo">Tipos de Serviços</string>
    <string name="txt_pf_selecione">Selecione Seu Prato</string>
    <string name="virado">Virado a Paulista - (R$15,00)</string>
    <string name="a">(arroz,tutu,couve...)</string>
    <string name="dobradinha">Dobradinha  - (R$12,00)</string>
    <string name="b">(bucho de boi...)</string>
    <string name="feiojoada">Feijoada  - (R$25,00)</string>
    <string name="c">(feijão preto com pertences de porco)</string>
    <string name="macarrao">Macarrão - (R$16,50)</string>
    <string name="d">(spaghetti ao sugo ou molho branco)</string>
    <string name="isca">Isca de Tilapia - (R$17,80)</string>
    <string name="e">(iscas de tilápia com molho de maracujá)</string>
    <string name="btn_add">Adicionar</string>
    <string name="lst_prato">Prato(s) Escolhido(s)</string>
    <string name="tot_prato"></string>
    <string name="tot_preco"></string>
    <string name="btn_proximo">Próximo</string>


</resources>
