<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/b"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PratoFeito">

    <TextView
        android:text="@string/txt_pf_selecione"
        android:layout_width="wrap_content"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black" />

    <CheckBox
        android:onClick="Selecionar"
        android:id="@+id/chk_virado"
        android:text="@string/virado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
    <TextView
        android:text="@string/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
         />
    <CheckBox
        android:onClick="Selecionar"
        android:id="@+id/chk_dobradinha"
        android:text="@string/dobradinha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        />
    <TextView
        android:text="@string/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/chk_bife"
         />
    <CheckBox
        android:onClick="Selecionar"
        android:id="@+id/chk_feijoada"
        android:text="@string/feiojoada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        />
    <TextView
        android:text="@string/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/chk_feijao"
        />
    <CheckBox
        android:onClick="Selecionar"
        android:id="@+id/chk_macarrao"
        android:text="@string/macarrao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />
    <CheckBox
        android:onClick="Selecionar"
        android:id="@+id/chk_isca"
        android:text="@string/isca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        />
    <TextView
        android:text="@string/e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:id="@+id/txt_titulo"
        />

    <TextView
        android:id="@+id/lst_prato"
        android:text="@string/lst_prato"
        android:layout_width="wrap_content"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/tot_prato"
        android:text="@string/tot_prato"
        android:layout_width="wrap_content"
        android:textSize="15dp"
        android:textColor="@color/abc_search_url_text_normal"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:id="@+id/tot_preco"
        android:text="@string/tot_preco"
        android:layout_width="wrap_content"
        android:textSize="15dp"
        android:textColor="@color/material_blue_grey_800"
        android:layout_height="wrap_content"
         />



    <Button
        android:text="@string/btn_proximo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="enviarDados"/>



</LinearLayout>
